2006-08-06  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.0.2.

	* NEWS: Bump version to 1.0.2.

	* configure.ac: Bump version to 1.0.2.

2006-08-03  Roger Leigh  <rleigh@debian.org>

	* Version 1.0.1.

2006-08-03  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #381271.

2006-08-03  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot.cc
	(set_location): Be less strict when validating the location;
	strict validation is already performed in derived chroot types.
	This prevents errors when reading the session configuration.

2006-08-02  Luk Claes  <luk@debian.org>

	* po/sv.po: Update Swedish translation.

2006-08-01  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.0.1.

	* NEWS: Bump version to 1.0.1.

	* configure.ac: Bump version to 1.0.1.

2006-08-01  Luk Claes  <luk@debian.org>

	* po/cs.po: Update Czech translation.

2006-07-31  Roger Leigh  <rleigh@debian.org>

	* Version 1.0.0.

	* debian/changelog: Update for 1.0.0.

2006-07-31  Roger Leigh  <rleigh@debian.org>

	* Merge from trunk.

	* schroot/schroot.1.in, dchroot/dchroot.1.in: Document mips and
	mipsel personality bug.

2006-07-31  Roger Leigh  <rleigh@debian.org>

	* Merge from trunk.

	* schroot/setup/50chrootname: Name in log message always matches
	debian_chroot chrootname.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-types.cc: Include sbuild-i18n.h here, rather than
	the header.

	* Update translator comments.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Add cs.

2006-07-30  Luk Claes  <luk@debian.org>

	* po/cs.po: Add Czech translation.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* Update translations.

2006-07-30  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Fix --enable-dchroot-dsa help string.  Thanks to
	Jens Seidel <jensseidel@users.sf.net> for reporting this.

	* schroot/schroot-options-base.cc
	(check_actions): Clarify error message when starting a session,