@@ -1,8 +1,13 @@
 schroot (1.0.2-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * sbuild/sbuild-session.cc: The syslog logging of the command or shell
+    being run in the chroot now only occurs when running as root or
+    switching to another user.  If the user is the same inside and outside
+    the chroot, and not root, the command or shell being run will not be
+    logged.  Thanks to Helge Kreutzmann (Closes: #381695).
 
- -- Roger Leigh <rleigh@debian.org>  Sun,  6 Aug 2006 21:43:20 +0100
+ -- Roger Leigh <rleigh@debian.org>  Sun,  6 Aug 2006 21:44:21 +0100
 
 schroot (1.0.1-1) unstable; urgency=low
 
